Finalized sample